# tax

./: QUICKSTART.md  README.md  deploy.sh  pyproject.toml  requirements.txt  setup.sh  streamlit_app.py
agent/: workflow.py
agent/steps/: adjustments.py  diagnostics.py  draft_forms.py  extract_data.py
sample_data/: client_gl_2024.csv  consulting_1120_2024.csv  manufacturing_1120_2024.csv  restaurant_1120_2024.csv
services/: extract.py  llm.py  provenance.py
ui/: form_1120_display.py  step_cards.py
