[tool.poetry]
name = "agentic-tax-drafter"
version = "0.1.0"
description = "AI-powered tax return drafting system with PDF/OCR processing"
authors = ["Tax AI Team"]
readme = "README.md"
packages = [{include = "agentic_tax_drafter", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.14"
streamlit = "^1.46.0"
openai = "^1.91.0"
pandas = "^2.3.0"
pydantic = "^2.11.7"
pypdf2 = "^3.0.1"
pdfplumber = "^0.11.7"
pytesseract = "^0.3.13"
pillow = "^11.2.1"
python-dotenv = "^1.1.1"
cohere = "^5.15.0"
groq = "^0.29.0"
google-generativeai = "^0.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
