[tool.poetry]
name = "agentic-tax-drafter"
version = "0.1.0"
description = "AI-powered tax return drafting system with PDF/OCR processing"
authors = ["Tax AI Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
streamlit = "^1.46.0"
openai = "^1.91.0"
pandas = "^2.3.0"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
